카카오 로그인 관련

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="twelve_jjangi"
         android:name="${applicationName}"
@@ -30,6 +31,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <!-- 카카오 SDK 설정 -->
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="3fdcaa17a7828b19a39c9e312ffb5631" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
